# data-engineering

./: .gitignore  LICENSE  README.md
module1/: README.md
module1/question1/: Dockerfile
module1/question2/: .docker-compose.yaml.swp  Dockerfile  docker-compose.yaml
module1/question3-6/: Dockerfile  README.md  docker-compose.yaml  ingest_data.py  pyproject.toml
module1/question3-6/dataset/: taxi_zone_lookup.parquet
module1/terraform/basic/: main.tf
module1/terraform/with_variables/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform_plan  variables.tf
module2/: .env_encoded  README.md  docker-compose.yml
module2/flows/: 02_postgres_taxi_scheduled.yaml  merilyn_gcp_kv.yaml  merilyn_gcp_setup.yaml  merilyn_gcp_taxi.yaml  merilyn_gcp_taxi_scheduled.yaml  merilyn_ingest_data.yaml  merilyn_ingest_data_scheduled.yaml
module2/scripts/: .flake8  ingest_data.py  pyproject.toml
module2/terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
module3/: README.md  pyproject.toml  upload_parquet_to_gcs.py
workshop/: .pipeline.py.swp  README.md  dlt_pipeline.duckdb  ny_taxi_pipeline.duckdb  pipeline.py  pyproject.toml
