[project]
name = "module3"
version = "0.1.0"
description = ""
authors = [
    {name = "Merilyn Chesler",email = "mc@box613.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gcsfs (>=2025.2.0,<2026.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "pprintpp (>=0.4.0,<0.5.0)",
    "pp-ez (>=0.2.0,<0.3.0)",
    "fsspec (>=2025.2.0,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
