[project]
name = "workshop"
version = "0.1.0"
description = ""
authors = [
    {name = "Merilyn Chesler",email = "mc@box613.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pp-ez (>=0.2.0,<0.3.0)",
    "pprintpp (>=0.4.0,<0.5.0)",
    "requests (>=2.32.3,<3.0.0)",
    "dlt[duckdb] (>=1.6.0,<2.0.0)",
    "streamlit (>=1.41.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
